--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </a>
             </div>
             <div class="button-group">
-                <a href="#" class="btn">Hire</a>
+                <a href="https://www.upwork.com/freelancers/~014cfc414a20e7fb8c?mp_source=share" class="btn">Hire</a>
                 <a href="#" class="btn">Contact</a>
             </div>
 
