--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     Vitro is a website that provides information about the company's products and services. It is
                     designed
                 </p>
-                <a href="#" class="btn">View Project</a>
+                <a href="https://codes-h7.github.io/virto/" class="btn">View Project</a>
             </div>
             <!-- second card -->
             <div class="project-cards">
