--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>code_with_khalsa</title>
+    <title>Harmeet Singh</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -13,8 +13,8 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">code_with_
-            <span>khalsa</span></a>
+        <a href="#" class="logo">Harmeet
+            <span>Singh</span></a>
             <i class="ri-menu-line" id="menu-icon" ></i>
         <nav class="navbar">
             <a href="#home">Home</a>
