--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi it's code-with<span>-khalsa</span></h1>
+            <h1>Hi it's Harmeet<span> Signh</span></h1>
             <h3>I'm <span>Web Developer</span></h3>
             <p>As a frontend web developer, I thrive on turning complex problems into simple, beautiful, and intuitive
                 designs. My expertise lies in crafting engaging user experiences through clean and efficient code.</p>
