--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harmeet Singh</title>
+    <title>code_with_khalsa</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -27,7 +27,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi it's Harmeet<span> Signh</span></h1>
+            <h1>Hi it's Harmeet<span>Singh</span></h1>
             <h3>I'm <span>Web Developer</span></h3>
             <p>As a frontend web developer, I thrive on turning complex problems into simple, beautiful, and intuitive
                 designs. My expertise lies in crafting engaging user experiences through clean and efficient code.</p>
@@ -128,12 +128,12 @@
             </div>
             <!-- fourth cards -->
             <div class="project-cards">
-                <img src="Screenshot 2024-07-25 011543.png" alt="">
+                <img src="Screenshot 2024-07-25 011543.png"  alt="">
                 <h3>Cactus Toys</h3>
                 <p>
                     Bascially this is ecommerce website and in the hero section of this site introduce new cactus toy
                 </p>
-                <a href="" class="btn">View Project</a>
+                <a href="https://codes-h7.github.io/virto/" class="btn">View Project</a>
             </div>
         </div>
     </section>
