--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     This project is about the company's products and services. It is designed to provide information
                     about the furniture
                 </p>
-                <a href="" class="btn">View Project</a>
+                <a href="https://codes-h7.github.io/this-is-digital/" class="btn">View Project</a>
             </div>
             <!-- fourth cards -->
             <div class="project-cards">
