--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <p>
                     Mainly this project base on technologies and games In the hero section i write eat drink and play
                 </p>
-                <a href="" class="btn">View Project</a>
+                <a href="https://codes-h7.github.io/sidcup/" class="btn">View Project</a>
             </div>
             <!-- third card -->
             <div class="project-cards">
@@ -133,7 +133,7 @@
                 <p>
                     Bascially this is ecommerce website and in the hero section of this site introduce new cactus toy
                 </p>
-                <a href="https://codes-h7.github.io/virto/" class="btn">View Project</a>
+                <a href="https://codes-h7.github.io/cactus-world/" class="btn">View Project</a>
             </div>
         </div>
     </section>
